# tf2-ndg-benchmarks

./: README.md  pyproject.toml  readthedocs.yml  tox.ini
.github/workflows/: pythonapp.yml
docs/: conf.py  environment.yml  index.md  index.rst  modules.rst  tf2_ndg_benckmarks.metrics.rst  tf2_ndg_benckmarks.metrics.utils.rst  tf2_ndg_benckmarks.rst
tests/: test_bleu.py  test_distinct.py  test_embedding.py  test_init.py  test_rouge.py
tf2_ndg_benckmarks/: __init__.py
tf2_ndg_benckmarks/metrics/: __init__.py  bleu.py  distinct.py  embedding.py  rouge.py
tf2_ndg_benckmarks/metrics/utils/: __init__.py  ngram.py
