[tool.poetry]
name = "tf2-ndg-benchmarks"
version = "0.1.0"
description = ""
authors = ["Katsuya SHIMABUKURO <katsu.generation.888@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pydocstyle = "^4.0"
flake8 = "^3.7"
autopep8 = "^1.4"
nose = "^1.3"
tox = "^3.14"
mypy = "^0.740.0"
sphinx = "^2.2"
commonmark = "^0.9.1"
recommonmark = "^0.6.0"
nltk = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
